# factory

./: ..module-common.o.cmd  .Module.symvers.cmd  .conveyor_driver.ko.cmd  .conveyor_driver.mod.cmd  .conveyor_driver.mod.o.cmd  .conveyor_driver.o.cmd  .gitignore  .modules.order.cmd  Makefile  README.md  conveyor_driver.c  conveyor_driver.ko  conveyor_driver.mod.c  conveyor_mqtt  conveyor_mqtt.cpp  conveyor_mqtt_tls  conveyor_user  conveyor_user.cpp  l298n_motor_driver.c  l298n_motor_driver.mod.c  modules.order  setup_conveyor.sh
arm/: robot_arm  robot_arm.cpp  servo_gpio3  servo_gpio3.cpp  servo_gpio5  servo_gpio5.cpp  servo_gpio6  servo_gpio6.cpp  servo_test  servo_test.cpp  setting  setting.cpp
control_test/: Makefile  README.md  motor_control.c
conveyor/: motor_control  motor_control.cpp
conveyor01_mqtt/: Makefile  cert_utils.hpp  conveyor.cpp  conveyor_driver.c  conveyor_mqtt.cpp  conveyor_mqtt_tls.cpp  conveyor_user.cpp  setup_conveyor.sh
conveyor01_nonstop_ver3/: conveyor_driver.c  conveyor_mqtt.cpp  conveyor_mqtt_tls.cpp  detect_ROI.cpp  setup_conveyor.sh
conveyor02_tls_mqtt/tls_mqtt_control/: CMakeLists.txt  README.md  cert_utils.cpp  cert_utils.hpp  main.cpp  mqtt_tls_conveyor.cpp  mqtt_tls_conveyor.hpp
conveyor_02/mqtt_control/: CMakeLists.txt  README.md  mqtt_motor_control.cpp
feeder/: ..module-common.o.cmd  .Module.symvers.cmd  .feeder_driver.ko.cmd  .feeder_driver.mod.cmd  .feeder_driver.mod.o.cmd  .feeder_driver.o.cmd  .modules.order.cmd  Kbuild  Makefile  feeder  feeder.cpp  feeder_driver.c  feeder_driver.ko  feeder_driver.mod  feeder_driver.mod.c  feeder_user.cpp  setup_feeder.sh
feeder_mqtt/: ..module-common.o.cmd  .Module.symvers.cmd  .feeder_driver.ko.cmd  .feeder_driver.mod.cmd  .feeder_driver.mod.o.cmd  .feeder_driver.o.cmd  .modules.order.cmd  Makefile  cert_utils.hpp  feeder  feeder.cpp  feeder_driver.c  feeder_driver.ko  (+9 more)
(+49 files in other folders)
